--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 numpy<2.0.0
-backtrader
-requests
-TA-Lib
-matplotlib
-yfinance
-fastapi
-click
-duckdb
-pytest
-twilio
-sendgrid
-boto3
+backtrader==1.9.78.123
+requests==2.32.3
+TA-Lib==0.4.32
+matplotlib==3.9.2
+yfinance==0.2.43
+fastapi==0.112.2
+click==8.1.7
+duckdb==1.0.0
+pytest==8.3.2
+twilio==9.2.3
+sendgrid==6.11.0
+boto3==1.35.14
